Fix z-index for modals in tinymce in overlay.

--- a/ftw/simplelayout/browser/resources/integration.theme.scss
+++ b/ftw/simplelayout/browser/resources/integration.theme.scss
@@ -726,6 +726,10 @@ ul[class^="sl-toolbar"] {
   }
 }
 
+.plone-modal-backdrop {
+  z-index: $zindex-modal !important;
+}
+
 // Prevent FOUC when manually setting the video dimensions
 .sl-youtube-video {
   visibility: hidden;
